Fix bugs with colors in tables in cases where some content comes before the start tag of BODY by rechecking the computed color of BODY more often.  b=94688  Patch from Mats Palmgren <mats.palmgren@bredband.net>.  r+sr=dbaron